syntax="proto3";
option java_package = "ma.khairy.customerservice.stub";

service CustomerService {
rpc getAllCustomers(GetAllCustomersRequest) returns (GetAllCustomersResponse);
rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
}

message Customer{
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message GetAllCustomersRequest {}
message GetAllCustomersResponse {
  repeated Customer customers = 1;
}


message GetCustomerByIdRequest {
  int64 id = 1;
}
message GetCustomerByIdResponse {
  Customer customer = 1;
}


message SaveCustomerRequest {
  CustomerRequest customer = 1;
}
message CustomerRequest{
  string name = 1;
  string email = 2;
}
message SaveCustomerResponse{
  Customer customer = 1;
}